# un_believable

./: .dockerignore  .env  Dockerfile  LICENSE  README.md  docker-compose.yaml  package-lock.json  pyproject.toml
models/: tony_hinchcliffe_voice_model.keras
src/un_believable/: main.py
src/un_believable/reddit/: main.py
src/un_believable/utils/: config.py  db.py  downloader.py  logger.py  youtube.py
src/un_believable/worker/: audio_processor.py  count.py  learn.py  phrase_detector.py  train.py  voice_model.py
src/un_believable/workflowing/: activities.py  worker.py  workflows.py
src/un_believable/youtube/: main.py
